mexendo tela home

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -21,19 +21,19 @@
         <p:panel id="painel_conteudo4" header="Dicas">
             <h:form>
                 <div class="card">
-                    Para fazer uma Inspeção é obrigatório ter um Empreendimento cadastrado.
+                    1. Para fazer uma Inspeção é obrigatório ter um Empreendimento cadastrado.
                 </div>
                 <br/>
                 <div class="card">
-                    Já há Categorias (ex: circulação, rampa) e itens relacionados a essa (ex: Circulação. Item 1: circulação com 1.50m) previamente cadastrados para já iniciar uma Inspeção. 
+                    2. Já há Categorias (ex: circulação, rampa) e Itens relacionados a essa (ex: Circulação. Item 1: circulação com 1.50m) previamente cadastrados para já iniciar uma Inspeção. 
                 </div>
                 <br/>
                 <div class="card">
-                    Caso queira cadastrar mais um Item na Inspeção é necessário: 1) cadastrar uma Categoria no menu de Cadastro; e 2) cadastrar um Item no menu de Cadastro e selecionar a Categoria cadastrada.
+                    3. Caso queira cadastrar mais um Item na Inspeção é necessário: 1) ir em Cadastro -> Categoria; e 2) ir em Cadastro -> Item.
                 </div>
                 <br/>
                 <div class="card">
-                    Caso queira cadastrar mais um Item na Inspeção com uma Categoria já existente é necessário: 1) cadastrar um Item no menu de Cadastro e 2) selecionar a Categoria já existente. 
+                    4. Caso queira cadastrar mais um Item na Inspeção com uma Categoria já existente é necessário: 1) ir em Cadastro -> Item.
                 </div>
             </h:form>
         </p:panel>
