--- a/src/main/webapp/empreendimento.xhtml
+++ b/src/main/webapp/empreendimento.xhtml
@@ -15,6 +15,10 @@
                 <!--aba para cadastrar e alterar-->
                 <p:tab title="Novo">
                     <h:form id="form_novo">
+                        
+<!--                        <p:growl id="growl" showDetail="true" />
+                        <p:growl id="growl-sticky" for="sticky-key" showDetail="true" sticky="true" />-->
+
                         <p:panelGrid columns="4" layout="flex"
                                      columnClasses="p-col-12 p-md-3 p-xl-2, p-col-12 p-md-9 p-xl-10"
                                      contentStyleClass="ui-fluid">
